--- a/style.css
+++ b/style.css
@@ -14,6 +14,20 @@
  *= require_self
  */
 
+article {
+  padding-top: 20px;
+  text-align: justify;
+}
+
+.app-text {
+  text-align: justify;
+  letter-spacing: -0.5px;
+}
+
+.app-text-1 {
+  text-align: left;
+}
+
 .border-box {
   margin-left: auto;
   margin-right: auto;
@@ -33,9 +47,13 @@ a {
   text-decoration: none;
 }
 
+.list-text {
+  text-align: left;
+  line-height: 1.5em;
+}
+
 /* underline */
 .section .content .title .title_inner {
-  margin-top: 50px;
   display: inline-block;
   line-height: 18px;
   font-size: 13px;
@@ -52,26 +70,96 @@ a {
   -khtml-box-shadow: inset 0 -6px 0px #ede574;
 }
 
+#holder {
+  width: 100%;
+}
+
+.tt {
+  display: none;
+}
+
+.ttt::after {
+  content: "\0020";
+  animation: pulse 2s 6;
+  color: transparent;
+  border-right: thick solid transparent;
+  animation-delay: 1.5s;
+  margin-left: 4px;
+  transform: scale(1);
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+    border-right: thick solid #f5e72d;
+  }
+  54% {
+    border-right: transparent;
+  }
+  74% {
+    transform: scale(1);
+    border-right: thick solid #f5e72d;
+  }
+  80% {
+    border-right: transparent;
+  }
+  90% {
+    transform: scale(0.95);
+    border-right: thick solid #f5e72d;
+  }
+}
+
+#hello {
+  color: rgb(116, 42, 190);
+  font-size: 35px;
+  font-weight: lighter;
+}
+
+#hola {
+  color: #941ae0;
+  font-size: 35px;
+  font-weight: lighter;
+}
+
+#bonjour {
+  color: #a626f5;
+  font-size: 35px;
+  font-weight: lighter;
+}
+
+#konnichiwa {
+  color: #f0009c;
+  font-size: 35px;
+  font-weight: lighter;
+}
+
+.bio-text {
+  color: #6e0e81;
+  font-weight:bolder;
+}
+
+.bio-text2 {
+  text-align: left;
+}
+
+.bio {
+  letter-spacing: -0.5px;
+}
+
 .band {
-  width: 90%;
+  width: 95%;
   max-width: 1240px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
-  grid-gap: 20px;
-  padding-top: 70px;
+  grid-gap: 15px;
+  padding-top: 50px;
 }
 
 .band_bio {
-  width: 90%;
-  max-width: 1240px;
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  grid-gap: 20px;
-  padding-top: 70px;
 }
 
 .card {
@@ -87,11 +175,18 @@ a {
 .card_bio {
   background: white;
   text-decoration: none;
-  display: flex;
-  flex-direction: column;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
 }
 
 .card_bio .thumb {
+  padding-bottom: 65%;
+  background-size: cover;
+  background-position: center top;
+}
+
+.card_bio .thumb-1 {
   padding-bottom: 65%;
   background-size: cover;
   background-position: center top;
@@ -104,6 +199,79 @@ a {
   background-position: center top;
 }
 
+.bio-pic {
+  padding-bottom: 35%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.card .thumb-1 {
+  padding-bottom: 62%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center top;
+  border: 1px solid rgb(10, 6, 201);
+}
+
+.card .thumb-solar {
+  padding-bottom: 62%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
+  border: 1px solid black;
+}
+
+
+.card .thumb-books {
+  padding-bottom: 62%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
+  border: 1px solid red;
+}
+
+.card .thumb-3 {
+  padding-bottom: 62%;
+  width: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center top;
+  border: 1px solid rgb(4, 110, 110);
+}
+
+.card .thumb-4 {
+  padding-bottom: 62%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center top;
+  border: 1px solid rgb(98, 7, 141);
+}
+
+.card .thumb-2 {
+  padding-bottom: 63%;
+  background-size: center;
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-color: whitesmoke;
+}
+
+.card .thumb-5 {
+  padding-bottom: 63%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-color: whitesmoke;
+  border: 1px solid rebeccapurple;
+}
+
+.card .thumb-book-review {
+  padding-bottom: 62%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
+  border: 1px solid black;
+}
+
 .card article {
   padding: 10px;
   flex: 1;
@@ -112,12 +280,12 @@ a {
   justify-content: space-between;
 }
 
-.card p {
+.card .app-text {
   flex: 1; /* make p grow to fill available space*/
-  line-height: 1.4;
+  line-height: 1.3em;
 }
 
-.card span {
+.card .app-title {
   font-size: 16px;
   font-weight: bold;
   color: #6e0e81;
@@ -133,32 +301,47 @@ a {
   box-shadow: 0 4px 5px rgba(214, 76, 248, 0.294);
 }
 
-@media only screen and (min-width: 500px) {
-  .band {
-    grid-template-columns: 1fr 1fr;
-  }
-  body {
-    padding: 20px;
-  }
+/* 
+HIGHLIGHT LINK EFFECT
+*/
+
+.highlight {
+  transition: all 0.4s ease 0s;
+  -moz-transition: all 0.4s ease 0s;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
 }
 
-@media only screen and (min-width: 500px) {
-  .band_bio {
-    grid-template-columns: 1fr;
-  }
+.bio:any-link {
+  color: blue;
 }
+
+.highlight:hover {
+  background-image: linear-gradient(to right, #6e0e81 0%, #bd4ad4 100%);
+  color: white;
+}
+
+.highlight-2 {
+  background-color: #fff2ac;
+  background-image: linear-gradient(to right, #ffe359 0%, #fff2ac 100%);
+}
+
+/* 
+MEDIA QUERIES 
+*/
 
 @media only screen and (min-width: 1000px) {
-  .band_bio {
+  .card_bio {
     grid-template-columns: 1fr;
-    width: 60%;
-
+    width: 70%;
   }
-}
 
-@media only screen and (min-width: 1000px) {
+  .band_bio {
+    padding-top: 40px;
+  }
+
   .band {
-    grid-template-columns: 1fr 1fr 1fr;
+    padding-top: 75px;
   }
   /* border theme  */
   #top,
@@ -173,7 +356,7 @@ a {
 h1 {
   text-align: left;
   font-family: "Roboto mono", monospace;
-  padding-top: 60px;
+  padding-top: 25px;
 }
 
 h2 {
@@ -190,14 +373,9 @@ h2 {
   height: 80px;
 }
 
-.container {
-  display: flex;
-  margin-top: 50px;
-}
-
-.my_bio {
-  padding-left: 1em;
+p {
   text-align: justify;
+  word-spacing: -0.2rem;
 }
 
 .pic {
@@ -243,13 +421,180 @@ h2 {
   bottom: 0;
 }
 
-.iconify-inline[data-icon='codicon:github'] {
-   color: #6e0e81;
-}
-
 .footer {
   flex-shrink: 0;
-  padding-top: 50px;
+  padding-top: 120px;
+  padding-bottom: 5px;
   text-align: center;
 }
 
+.p-footer {
+  padding-bottom: 5px;
+  text-align: center;
+}
+
+#iconify-inline-github {
+  padding-right: 10px;
+}
+
+#iconify-inline-linkedin {
+  padding-right: 95px;
+}
+
+#iconify-inline-twitter {
+  padding-left: 95px;
+}
+
+@media only screen and (min-width: 1000px) {
+  .band_bio {
+    grid-template-columns: 1fr;
+  }
+
+  #iconify-inline-linkedin {
+    padding-right: 105px;
+  }
+
+  #iconify-inline-twitter {
+    padding-left: 105px;
+  }
+}
+
+@media only screen and (min-width: 500px) {
+  h1 {
+    padding-top: 30px;
+  }
+
+  body {
+    padding: 5px;
+  }
+
+  .band {
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+  }
+
+  .band_bio {
+    grid-template-columns: 1fr;
+    width: 85%;
+  }
+
+  .footer {
+    padding-bottom: 0px;
+    padding-top: 115px;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  h1 {
+    padding-top: 9px;
+  }
+
+  #hello,
+  #hola,
+  #bonjour,
+  #konnichiwa {
+    font-size: 24px;
+  }
+
+  .bio {
+    word-spacing: -0.3rem;
+    letter-spacing: -1px;
+    line-height: 21px;
+  }
+
+  .app-text {
+    word-spacing: -0.3rem;
+    /* letter-spacing:-0.4px; */
+    line-height: 1.4em;
+  }
+
+  .band {
+    padding-top: 50px;
+    width: 100%;
+  }
+
+  #iconify-inline-linkedin {
+    padding-right: 75px;
+  }
+
+  #iconify-inline-twitter {
+    padding-left: 75px;
+  }
+
+  #iconify-inline-linkedin,
+  #iconify-inline-gmail,
+  #iconify-inline-twitter {
+    font-size: 15px;
+  }
+
+  .footer {
+    padding-top: 100px;
+    font-size: 13px;
+    font-weight: bold;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  body {
+    padding: 20px;
+  }
+
+  .card .app-text {
+    flex: 1;
+    line-height: 1.4em;
+  }
+
+  .app-text {
+    letter-spacing: -1.4px;
+  }
+
+  .band {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .band_bio {
+    grid-template-columns: 1fr;
+    width: 55%;
+  }
+
+  #iconify-inline-linkedin,
+  #iconify-inline-gmail,
+  #iconify-inline-twitter {
+    font-size: 16.2px;
+  }
+}
+
+@media only screen and (min-width: 540px) {
+  .card .app-text {
+    flex: 1;
+    line-height: 1.4em;
+  }
+
+  .app-text {
+    letter-spacing: -1.6px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .card .app-text {
+    flex: 1;
+    line-height: 1.4em;
+  }
+
+  .app-text {
+    letter-spacing: -1.0px;
+  }
+}
+
+@media only screen and (min-width: 844px) {
+  .card .app-text {
+    flex: 1;
+    line-height: 1.4em;
+  }
+
+  .app-text {
+    letter-spacing: -1.6px;
+  }
+}
+ 
+ 
