--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ a {
 h1 {
   text-align: left;
   font-family: "Roboto mono", monospace;
-  padding-top: 60px;
+  padding-top: 10px;
 }
 
 h2 {
@@ -259,6 +259,7 @@ h2 {
 .footer {
   flex-shrink: 0;
   padding-top: 150px;
+  padding-bottom: 10px;
   text-align: center;
 }
 
