--- a/style.css
+++ b/style.css
@@ -62,18 +62,18 @@ a {
 }
 
 .band {
-  width: 90%;
+  width: 95%;
   max-width: 1240px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   grid-gap: 20px;
-  padding-top: 70px;
+  padding-top: 120px;
 }
 
 .band_bio {
-  width: 90%;
+  width: 95%;
   max-width: 1240px;
   margin: 0 auto;
   display: grid;
@@ -171,6 +171,10 @@ a {
   line-height: 1.4;
 }
 
+.text {
+  text-align: justify;
+}
+
 .card span {
   font-size: 16px;
   font-weight: bold;
@@ -200,13 +204,33 @@ a {
   .band_bio {
     grid-template-columns: 1fr;
   }
+  .footer {
+    padding-top: 120px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .band_bio {
+    padding-top: 40px;
+  }
+  .section .content .title .title_inner {
+    margin-top: 0px;
+  }
+
+  .band {
+    padding-top: 60px;
+    width: 100%;
+
+  }
+  .footer {
+    padding-top: 120px;
+  }
 }
 
 @media only screen and (min-width: 1000px) {
   .band_bio {
     grid-template-columns: 1fr;
     width: 60%;
-
   }
 }
 
@@ -214,6 +238,12 @@ a {
   .band {
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+  .card_bio {
+    grid-template-columns: 1fr;
+    width: 70%;
+  }
+
   /* border theme  */
   #top,
   #bottom,
