--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ a {
 @media only screen and (min-width: 500px) {
   .band {
     grid-template-columns: 1fr 1fr;
+    width: 100%;
   }
   body {
     padding: 20px;
