--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ a {
 }
 
 .tt {
-   display: none;
+  display: none;
 }
 
 .red {
@@ -70,45 +70,58 @@ a {
 
 .ttt::after {
   content: "\0020";
-  animation:pulse 2s 6;
+  animation: pulse 2s 6;
   color: transparent;
   border-right: thick solid transparent;
-  animation-delay:1.5s;
+  animation-delay: 1.5s;
   margin-left: 4px;
   transform: scale(1);
   animation-timing-function: ease-in-out;
 }
 
 @keyframes pulse {
-  0% {transform:scale(0.95);border-right:thick solid #f5e72d;}
-  54% {border-right:transparent;}
-  74% {transform:scale(1);border-right:thick solid #f5e72d;}
-  80% {border-right:transparent;}
-  90% {transform: scale(0.95);border-right:thick solid #f5e72d;}
+  0% {
+    transform: scale(0.95);
+    border-right: thick solid #f5e72d;
+  }
+  54% {
+    border-right: transparent;
+  }
+  74% {
+    transform: scale(1);
+    border-right: thick solid #f5e72d;
+  }
+  80% {
+    border-right: transparent;
+  }
+  90% {
+    transform: scale(0.95);
+    border-right: thick solid #f5e72d;
+  }
 }
 
 #hello {
-  color:rgb(116, 42, 190);
-  font-size:35px;
-  font-weight:lighter;
+  color: rgb(116, 42, 190);
+  font-size: 35px;
+  font-weight: lighter;
 }
 
 #hola {
-  color:#941ae0;
-  font-size:35px;
-  font-weight:lighter;
+  color: #941ae0;
+  font-size: 35px;
+  font-weight: lighter;
 }
 
 #privet {
-  color:#a626f5;
-  font-size:35px;
-  font-weight:lighter;
+  color: #a626f5;
+  font-size: 35px;
+  font-weight: lighter;
 }
 
 #konnichiwa {
-  color:#F0009C;
-  font-size:35px;
-  font-weight:lighter;
+  color: #f0009c;
+  font-size: 35px;
+  font-weight: lighter;
 }
 
 .bio-text {
@@ -161,7 +174,6 @@ a {
   background-position: center top;
 }
 
-
 .card_bio .thumb-1 {
   padding-bottom: 65%;
   background-size: cover;
@@ -186,7 +198,7 @@ a {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center top;
-  border:1px solid rgb(29, 2, 151);
+  border: 1px solid rgb(29, 2, 151);
 }
 
 .card .thumb-3 {
@@ -194,7 +206,7 @@ a {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center top;
-  border:1px solid rgb(4, 136, 136);
+  border: 1px solid rgb(4, 136, 136);
 }
 
 .card .thumb-4 {
@@ -202,7 +214,7 @@ a {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center top;
-  border:1px solid rgb(98, 7, 141);
+  border: 1px solid rgb(98, 7, 141);
 }
 
 .card .thumb-2 {
@@ -219,6 +231,7 @@ a {
   background-repeat: no-repeat;
   background-position: center top;
   background-color: whitesmoke;
+  border: 1px solid rgb(29, 2, 151);
 }
 
 .card article {
@@ -274,14 +287,18 @@ a {
   .band_bio {
     padding-top: 40px;
   }
+
   .section .content .title .title_inner {
     margin-top: 0px;
   }
 
-  .band {
-    padding-top: 70px;
-    width: 100%;
+  #hello, #hola,  #privet, #konnichiwa {
+    font-size: 24px;
+  }
 
+  .band {
+    padding-top: 60px;
+    width: 100%;
   }
 
   footer {
@@ -389,8 +406,8 @@ h2 {
   bottom: 0;
 }
 
-.iconify-inline[data-icon='codicon:github'] {
-   color: #6e0e81;
+.iconify-inline[data-icon="codicon:github"] {
+  color: #6e0e81;
 }
 
 .footer {
@@ -407,7 +424,3 @@ h2 {
 #iconify-inline-twitter {
   padding-left: 60px;
 }
-
-
-
-
