--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ a {
 
 /* underline */
 .section .content .title .title_inner {
-  margin-top: 50px;
   display: inline-block;
   line-height: 18px;
   font-size: 13px;
@@ -112,7 +111,7 @@ a {
   font-weight: lighter;
 }
 
-#privet {
+#bonjour {
   color: #a626f5;
   font-size: 35px;
   font-weight: lighter;
@@ -129,6 +128,10 @@ a {
   font-weight: 600;
 }
 
+.bio-text2 {
+  text-align: left;
+}
+
 .band {
   width: 95%;
   max-width: 1240px;
@@ -136,19 +139,12 @@ a {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
-  grid-gap: 20px;
-  padding-top: 120px;
+  grid-gap: 15px;
+  padding-top: 50px;
 }
 
 .band_bio {
-  width: 95%;
-  max-width: 1240px;
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  grid-gap: 20px;
-  padding-top: 70px;
 }
 
 .card {
@@ -164,8 +160,9 @@ a {
 .card_bio {
   background: white;
   text-decoration: none;
-  display: flex;
-  flex-direction: column;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
 }
 
 .card_bio .thumb {
@@ -198,7 +195,15 @@ a {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center top;
-  border: 1px solid rgb(29, 2, 151);
+  border: 1px solid rgb(10, 6, 201);
+}
+
+.card .thumb-solar {
+  padding-bottom: 62%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center top;
+  border: 1px solid red;
 }
 
 .card .thumb-3 {
@@ -206,7 +211,7 @@ a {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center top;
-  border: 1px solid rgb(4, 136, 136);
+  border: 1px solid rgb(4, 110, 110);
 }
 
 .card .thumb-4 {
@@ -231,7 +236,15 @@ a {
   background-repeat: no-repeat;
   background-position: center top;
   background-color: whitesmoke;
-  border: 1px solid rgb(29, 2, 151);
+  border: 1px solid rebeccapurple;
+}
+
+.card .thumb-book-review {
+  padding-bottom: 62%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
+  border: 1px solid black;
 }
 
 .card article {
@@ -263,67 +276,19 @@ a {
   box-shadow: 0 4px 5px rgba(214, 76, 248, 0.294);
 }
 
-@media only screen and (min-width: 500px) {
-  .band {
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-  }
-  body {
-    padding: 20px;
-  }
-}
-
-@media only screen and (min-width: 500px) {
-  .band_bio {
-    grid-template-columns: 1fr;
-  }
-
-  .footer {
-    padding-top: 50px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .band_bio {
-    padding-top: 25px;
-  }
-
-  .section .content .title .title_inner {
-    margin-top: 0px;
-  }
-
-  #hello, #hola,  #privet, #konnichiwa {
-    font-size: 26px;
-    font-weight: 500;
-  }
-
-  .band {
-    padding-top: 65px;
-    width: 100%;
-  }
-
-  footer {
-    padding-top: 50px;
-  }
-}
-
 @media only screen and (min-width: 1000px) {
-  .band_bio {
-    grid-template-columns: 1fr;
-    width: 60%;
-  }
-}
-
-@media only screen and (min-width: 1000px) {
-  .band {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-
   .card_bio {
     grid-template-columns: 1fr;
     width: 70%;
   }
 
+  .band_bio {
+    padding-top: 40px;
+  }
+
+  .band {
+    padding-top: 75px;
+  }
   /* border theme  */
   #top,
   #bottom,
@@ -337,7 +302,7 @@ a {
 h1 {
   text-align: left;
   font-family: "Roboto mono", monospace;
-  padding-top: 10px;
+  padding-top: 25px;
 }
 
 h2 {
@@ -354,14 +319,14 @@ h2 {
   height: 80px;
 }
 
-.container {
-  display: flex;
-  margin-top: 50px;
-}
-
 .my_bio {
   padding-left: 1em;
   text-align: justify;
+}
+
+p {
+  text-align: justify;
+  word-spacing: -0.2rem;
 }
 
 .pic {
@@ -407,21 +372,134 @@ h2 {
   bottom: 0;
 }
 
-.iconify-inline[data-icon="codicon:github"] {
-  color: #6e0e81;
-}
-
 .footer {
   flex-shrink: 0;
-  padding-top: 125px;
-  padding-bottom: 10px;
+  padding-top: 120px;
+  padding-bottom: 5px;
+  text-align: center;
+}
+
+.p-footer {
+  padding-bottom: 5px;
   text-align: center;
 }
 
 #iconify-inline-linkedin {
-  padding-right: 60px;
+  padding-right: 95px;
 }
 
 #iconify-inline-twitter {
-  padding-left: 60px;
+  padding-left: 95px;
+}
+
+@media only screen and (min-width: 1000px) {
+  .band_bio {
+    grid-template-columns: 1fr;
+  }
+
+  #iconify-inline-linkedin {
+    padding-right: 105px;
+  }
+
+  #iconify-inline-twitter {
+    padding-left: 105px;
+  }
+}
+
+@media only screen and (min-width: 500px) {
+  h1 {
+    padding-top: 30px;
+  }
+
+  body {
+    padding: 5px;
+  }
+
+  .band {
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+  }
+
+  .band_bio {
+    grid-template-columns: 1fr;
+    width: 85%;
+  }
+
+  .footer {
+    padding-bottom: 0px;
+    padding-top: 115px;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  h1 {
+    padding-top: 9px;
+  }
+
+  #hello,
+  #hola,
+  #bonjour,
+  #konnichiwa {
+    font-size: 24px;
+  }
+
+  article {
+    text-align: left;
+  }
+
+  p {
+    word-spacing: -0.4rem;
+  }
+
+  .band {
+    padding-top: 50px;
+    width: 100%;
+  }
+
+  #iconify-inline-linkedin {
+    padding-right: 75px;
+  }
+
+  #iconify-inline-twitter {
+    padding-left: 75px;
+  }
+
+  #iconify-inline-linkedin,
+  #iconify-inline-gmail,
+  #iconify-inline-twitter {
+    font-size: 15px;
+  }
+
+  .footer {
+    padding-top: 100px;
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  p {
+    text-align: left;
+    word-spacing: normal;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  body {
+    padding: 20px;
+  }
+  
+  .band {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .band_bio {
+    grid-template-columns: 1fr;
+    width: 55%;
+  }
+
+  #iconify-inline-linkedin,
+  #iconify-inline-gmail,
+  #iconify-inline-twitter {
+    font-size: 16.2px;
+  }
 }
