--- a/style.css
+++ b/style.css
@@ -16,7 +16,12 @@
 
 article {
   padding-top: 20px;
+  text-align:justify;
+}
+
+.app-text {
   text-align: justify;
+  letter-spacing:-1px;
 }
 
 .border-box {
@@ -128,6 +133,10 @@ a {
 .bio-text2 {
   text-align: left;
   letter-spacing: -0.02;
+}
+
+.bio {
+  letter-spacing: -.5px;
 }
 
 .band {
@@ -460,12 +469,9 @@ p {
     font-size: 24px;
   }
 
-  article {
-    text-align: left;
-  }
-
-  p {
-    word-spacing: -0.4rem;
+  .bio {
+    word-spacing: -0.3rem;
+    letter-spacing: -1px;
   }
 
   .band {
@@ -490,13 +496,6 @@ p {
   .footer {
     padding-top: 100px;
     font-size: 12px;
-  }
-}
-
-@media only screen and (max-width: 390px) {
-  p {
-    text-align: left;
-    word-spacing: normal;
   }
 }
 
