--- a/style.css
+++ b/style.css
@@ -16,12 +16,16 @@
 
 article {
   padding-top: 20px;
-  text-align:justify;
+  text-align: justify;
 }
 
 .app-text {
   text-align: justify;
-  letter-spacing:-1px;
+  letter-spacing: -0.5px;
+}
+
+.app-text-1 {
+  text-align: left;
 }
 
 .border-box {
@@ -43,8 +47,14 @@ a {
   text-decoration: none;
 }
 
+.list-text {
+  text-align: left;
+  letter-spacing: -1px;
+  line-height: 1.5em;
+}
+
 /* underline */
- .section .content .title .title_inner {
+.section .content .title .title_inner {
   display: inline-block;
   line-height: 18px;
   font-size: 13px;
@@ -59,7 +69,7 @@ a {
   -moz-box-shadow: inset 0 -6px 0px #ede574;
   -webkit-box-shadow: inset 0 -6px 0px #ede574;
   -khtml-box-shadow: inset 0 -6px 0px #ede574;
-} 
+}
 
 #holder {
   width: 100%;
@@ -136,7 +146,7 @@ a {
 }
 
 .bio {
-  letter-spacing: -.5px;
+  letter-spacing: -0.5px;
 }
 
 .band {
@@ -262,9 +272,9 @@ a {
   justify-content: space-between;
 }
 
-.card p {
+.card .app-text {
   flex: 1; /* make p grow to fill available space*/
-  line-height: 1.4;
+  line-height: 1.3em;
 }
 
 .card span {
@@ -299,7 +309,7 @@ HIGHLIGHT LINK EFFECT
 }
 
 .highlight:hover {
-  background-image: linear-gradient(to right, #6E0E81 0%, #bd4ad4 100%);
+  background-image: linear-gradient(to right, #6e0e81 0%, #bd4ad4 100%);
   color: white;
 }
 
@@ -410,6 +420,10 @@ p {
   text-align: center;
 }
 
+#iconify-inline-github {
+  padding-right: 10px;
+}
+
 #iconify-inline-linkedin {
   padding-right: 95px;
 }
@@ -472,6 +486,7 @@ p {
   .bio {
     word-spacing: -0.3rem;
     letter-spacing: -1px;
+    line-height: 21px;
   }
 
   .band {
@@ -495,7 +510,8 @@ p {
 
   .footer {
     padding-top: 100px;
-    font-size: 12px;
+    font-size: 13px;
+    font-weight: bold;
   }
 }
 
