parent 2bd8598646ddf85f096fb11de373c0c24d3e375c author Sandy Vasquez <sandyvasquez9@gmail.com> 1644216326 -0800 committer Sandy Vasquez <sandyvasquez9@gmail.com> 1644326433 -0800
adding favicon and other styling

Remove .DS_Store from everywhere

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ a {
 
 .list-text {
   text-align: left;
-  letter-spacing: -1px;
   line-height: 1.5em;
 }
 
@@ -137,12 +136,11 @@ a {
 
 .bio-text {
   color: #6e0e81;
-  font-weight: 600;
+  font-weight:bolder;
 }
 
 .bio-text2 {
   text-align: left;
-  letter-spacing: -0.02;
 }
 
 .bio {
@@ -277,7 +275,7 @@ a {
   line-height: 1.3em;
 }
 
-.card span {
+.card .app-title {
   font-size: 16px;
   font-weight: bold;
   color: #6e0e81;
@@ -312,6 +310,12 @@ HIGHLIGHT LINK EFFECT
   background-image: linear-gradient(to right, #6e0e81 0%, #bd4ad4 100%);
   color: white;
 }
+
+.highlight-2 {
+  background-color: #fff2ac;
+  background-image: linear-gradient(to right, #ffe359 0%, #fff2ac 100%);
+}
+
 
 /* 
 MEDIA QUERIES 
@@ -489,6 +493,12 @@ p {
     line-height: 21px;
   }
 
+  .app-text {
+    word-spacing: -0.3rem;
+    /* letter-spacing:-0.4px; */
+    line-height: 1.4em;
+  }
+
   .band {
     padding-top: 50px;
     width: 100%;
@@ -520,6 +530,15 @@ p {
     padding: 20px;
   }
 
+  .card .app-text {
+    flex: 1;
+    line-height: 1.4em;
+  }
+
+  .app-text {
+    letter-spacing: -1.4px;
+  }
+
   .band {
     grid-template-columns: 1fr 1fr 1fr;
   }
@@ -535,3 +554,38 @@ p {
     font-size: 16.2px;
   }
 }
+
+@media only screen and (min-width: 540px) {
+  .card .app-text {
+    flex: 1;
+    line-height: 1.4em;
+  }
+
+  .app-text {
+    letter-spacing: -1.6px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .card .app-text {
+    flex: 1;
+    line-height: 1.4em;
+  }
+
+  .app-text {
+    letter-spacing: -1.0px;
+  }
+}
+
+@media only screen and (min-width: 844px) {
+  .card .app-text {
+    flex: 1;
+    line-height: 1.4em;
+  }
+
+  .app-text {
+    letter-spacing: -1.6px;
+  }
+}
+ 
+ 
